fixed positioning of zestlink img to align with top nav

--- a/src/shell/components/global-actions/styles.less
+++ b/src/shell/components/global-actions/styles.less
@@ -70,7 +70,7 @@
       display: flex;
       align-items: center;
       align-self: flex-start;
-      padding-left: 35px;
+      padding-left: 40px;
     }
 
     .AppVersion {
